--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="notification has-text-grey">
             Type your text and get base64 encoded, or type your base64 and get the plain text. <b>It's two way binded!</b>
         </p>
-        <p class="center">powered by <a target="blank" href="https://www.enbiso.com">enbiso</a></p>
+        <p class="has-text-centered">powered by <a target="blank" href="https://www.enbiso.com">enbiso</a></p>
     </div>
 
     <script>
