--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <p class="notification has-text-grey">
             Type your text and get base64 encoded, or type your base64 and get the plain text. <b>It's two way binded!</b>
         </p>
-        <p class="has-text-centered">powered by <a target="blank" href="https://www.enbiso.com">enbiso</a></p>
+        <hr/>
+        <p class="has-text-centered">
+            With &hearts; by <a target="blank" href="https://www.enbiso.com">enbiso</a> | 
+            <a target="blank" href="https://github.com/enbiso/online-base64">Fork in Github</a>
+        </p>
     </div>
 
     <script>
