--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
     </div>
 
-    <script>
+    <script type="module">
         import { createApp } from 'vue'
         var app = createApp({
             data() {
