--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Simple online base64 encode/decode</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
     <style>
         .column {
@@ -58,15 +58,13 @@
         </p>
     </div>
 
-    <script type="module">
-        import { createApp } from 'vue'
-        var app = createApp({
-            data() {
-                return {
-                    text: '',
-                    base64: '',
-                    passwordLength: 16
-                }
+    <script>
+        var app = new Vue({
+            el: '#app',
+            data: {
+                text: '',
+                base64: '',
+                passwordLength: 16
             },
             methods: {
                 encode: function (event) {
@@ -85,7 +83,7 @@
                     this.encode(event);
                 }
             }
-        }).mount('#app');
+        });
         new ClipboardJS('.clip-btn');
     </script>
 
